syntax = "proto3";

package greet;
option go_package = "greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

service GreetService {
    // unary API
    rpc Greet(GreetingRequest) returns (GreetingResponse) {};

    // server streaming or server push
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}
